# indie-oidc-provider

./: .gitignore  flake.nix  pyproject.toml  requirements.txt
indie_oidc_provider/: __init__.py  models.py  oauth2.py  routes.py  settings.py
instance.example/: config.py
